--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Shoptik-ecommerce-web-app",
+  "name": "gadgetsdistrict",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,17 +12,24 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.0.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@stripe/react-stripe-js": "^1.16.4",
     "@stripe/stripe-js": "^1.46.0",
     "airtable-node": "^0.1.20",
-    "axios": "^1.2.5",
-    "dotenv": "^16.0.3",
+    "axios": "^1.7.9",
+    "dotenv": "^16.4.5",
+    "marked": "^15.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
     "react-icons": "^4.4.0",
+    "react-markdown": "^9.0.3",
     "react-router-dom": "^6.4.2",
-    "stripe": "^11.11.0"
+    "react-slick": "^0.30.2",
+    "react-toastify": "^11.0.2",
+    "slick-carousel": "^1.8.1",
+    "stripe": "^11.11.0",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
